<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/txtLoginEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginEmailUser"
        app:layout_constraintStart_toStartOf="@+id/txtLoginEmailUser"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginEmailUser" />

    <Button
        android:id="@+id/login_loginBtn"
        android:layout_width="214dp"
        android:layout_height="52dp"
        android:layout_marginTop="96dp"
        android:onClick="onLoginButtonClick"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_grey"
        app:iconTint="@color/button_grey"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/txtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <Button
        android:id="@+id/login_loginGoogle"
        android:layout_width="214dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:onClick="onLoginViaGoogleButtonClick"
        android:text="@string/log_in_via_google"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_grey"
        app:iconTint="@color/button_grey"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/txtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_loginBtn" />

    <Button
        android:id="@+id/login_forgotPassword"
        android:layout_width="129dp"
        android:layout_height="37dp"
        android:layout_marginEnd="80dp"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:onClick="onForgotPasswordButtonClick"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/com_facebook_blue"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>